Fix inspections for newer Java versions